--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 <body>
 
     <div class="login-container">
+        <img src="logo.png" alt="Technologie Médicale" class="logo">
         <h2>Connexion</h2>
         <form onsubmit="return checkLogin(event)">
             <label for="username">Nom d'utilisateur :</label>
@@ -22,6 +23,15 @@
 
         <p id="error-message" class="error"></p>
     </div>
+
+    <footer>
+        <p>
+            TECHNOLOGIE MEDICALE S.A.S. - 101 rue Vaillant Couturier 93130 NOISY LE SEC FRANCE<br>
+            +33 (0)1 48 45 58 95 | +33 (0)1 49 42 90 21 | 
+            <a href="mailto:info@technologiemedicale.com">info@technologiemedicale.com</a><br>
+            <a href="https://www.technologiemedicale.com" target="_blank">https://www.technologiemedicale.com</a>
+        </p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
